Revision history for Dist-Zilla-Plugin-StaticInstall

{{$NEXT}}

0.006     2015-07-19 05:24:25Z
          - fix test that breaks with older Dist::Zilla that did not use
            CPAN::Meta::Merge to merge metadata snippets

0.005     2015-07-18 03:05:42Z
          - fix usage with [MakeMaker::Fallback]
          - improved diagnostic messages
          - lots more tests!

0.004     2015-07-16 04:51:52Z
          - also check for .pm, .pod, .pl files in the root and in BASEEXT/
          - also check for .PL, .pmc files
          - skip test for build scenario that can only exist from Dist::Zilla
            5.022 and later
          - expand upon the documentation and add a much more strongly-worded
            warning against this plugin's use (RT#105847)

0.003     2015-07-14 03:24:15Z
          - cooperate with [ModuleBuildTiny]'s static = auto feature

0.002     2015-07-14 02:43:32Z
          - new mode allowing the automatic calculation of the flag
            value, including a dry_run option for diagnostic purposes

0.001     2015-06-27 19:44:36Z
          - Initial release.