@@ -48,9 +48,14 @@ subtest "preset x_static_install = input of $_->{x_static_install}, our mode = $
 
     $tzil->chrome->logger->set_debug(1);
 
+    my $error = q{Can't merge attribute x_static_install}
+        . (eval { require CPAN::Meta::Merge; CPAN::Meta::Merge->VERSION('2.143240'); 1 }
+          ? q{: '} . $config->{x_static_install} . q{' does not equal '} . ($config->{mode} eq 'on' ? 1 : 0) . q{' at }
+          : '');
+
     like(
         exception { $tzil->build },
-        qr/Can't merge attribute x_static_install: '$config->{x_static_install}' does not equal '${ \($config->{mode} eq 'on' ? 1 : 0) }' at /,
+        qr/$error/,
         'build fails in setup_installer when the results conflict',
     );
 
